--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,8 @@ dependencies:
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   logger: ^2.6.1
-
+  printing: ^5.12.0
+  share_plus: ^10.0.2
 
 flutter_native_splash:
   color: "#ffffff"
