--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   google_fonts: ^6.2.1
   animated_check:
   device_info_plus:
+  sentry_flutter: ^9.6.0
 
 
 flutter_native_splash:
