--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   animated_check:
   device_info_plus:
   sentry_flutter: ^9.6.0
-
+  fluttertoast:
 
 flutter_native_splash:
   color: "#ffffff"
