--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   device_info_plus:
   sentry_flutter: ^9.6.0
   fluttertoast:
+  android_id: ^0.3.6
+
 
 flutter_native_splash:
   color: "#ffffff"
