WIP:service, viewmodel, model buat regist dan binding, prepare webview dan deeplink

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   android_id: ^0.3.6
   flutter_screenutil: ^5.9.3
   app_links: ^3.4.0
+  webview_flutter: ^4.2.2
 
 
 flutter_native_splash:
