--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   app_links: ^3.4.0
   webview_flutter: ^4.2.2
+  url_launcher: ^6.3.2
 
 
 flutter_native_splash:
