--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   app_links: ^3.4.0
   webview_flutter: ^4.2.2
   url_launcher: ^6.3.2
+  flutter_dotenv: ^6.0.0
 
 
 flutter_native_splash:
@@ -90,6 +91,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/  # includes all images inside assets/images folder
+    - .env
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
