--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,33 +28,32 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  android_id: ^0.3.6
+  animated_check: null
+  app_links: ^3.4.0
+  bloc: ^9.0.0
+  cupertino_icons: ^1.0.8
+  device_info_plus: null
+  dio: ^5.9.0
   flutter:
     sdk: flutter
-  intl: ^0.19.0
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
-  http: ^1.5.0
-  provider: ^6.1.5
-  dio: ^5.9.0
+  flutter_bloc: ^9.1.1
+  flutter_dotenv: ^6.0.0
+  flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.4
-  shared_preferences: ^2.5.3
-  shimmer: ^3.0.0
+  fluttertoast: null
+  google_fonts: ^6.2.1
+  http: ^1.5.0
+  intl: ^0.19.0
   logger: ^2.6.1
   printing: ^5.12.0
-  share_plus: ^10.0.2
-  google_fonts: ^6.2.1
-  animated_check:
-  device_info_plus:
+  provider: ^6.1.5
   sentry_flutter: ^9.6.0
-  fluttertoast:
-  android_id: ^0.3.6
-  flutter_screenutil: ^5.9.3
-  app_links: ^3.4.0
-  webview_flutter: ^4.2.2
+  share_plus: ^10.0.2
+  shared_preferences: ^2.5.3
+  shimmer: ^3.0.0
   url_launcher: ^6.3.2
-  flutter_dotenv: ^6.0.0
-
+  webview_flutter: ^4.2.2
 
 flutter_native_splash:
   color: "#ffffff"
@@ -64,12 +63,9 @@ flutter_native_splash:
 flutter_icons:
   android: true
   ios: false
-  image_path: "assets/images/logo.png"  # path icon kamu
+  image_path: "assets/images/logo.png" # path icon kamu
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  flutter_native_splash: ^2.2.9
   flutter_launcher_icons: ^0.13.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -78,10 +74,12 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+  flutter_native_splash: ^2.2.9
+  flutter_test:
+    sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -90,19 +88,16 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/images/  # includes all images inside assets/images folder
+    - assets/images/ # includes all images inside assets/images folder
     - .env
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
