--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.4
   fluttertoast: null
+  geolocator: ^14.0.2
   google_fonts: ^6.3.1
   http: ^1.5.0
   intl: ^0.19.0
