--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,44 @@ dev_dependencies:
     sdk: flutter
 flutter:
   uses-material-design: true
+  fonts:
+    - family: SFProDisplay # Nama Family yang akan digunakan di kode Flutter
+      fonts:
+        # Thin (100)
+        - asset: fonts/SF-Pro-Display-Thin.otf
+          weight: 100
+
+        # Ultralight (200)
+        - asset: fonts/SF-Pro-Display-Ultralight.otf
+          weight: 200
+
+        # Light (300)
+        - asset: fonts/SF-Pro-Display-Light.otf
+          weight: 300
+
+        # Regular (400) - Umumnya tidak perlu weight: 400, tapi boleh ditambahkan
+        - asset: fonts/SF-Pro-Display-Regular.otf
+          weight: 400
+
+        # Medium (500)
+        - asset: fonts/SF-Pro-Display-Medium.otf
+          weight: 500
+
+        # Semibold (600)
+        - asset: fonts/SF-Pro-Display-Semibold.otf
+          weight: 600
+
+        # Bold (700) - Akan digunakan saat memanggil FontWeight.bold
+        - asset: fonts/SF-Pro-Display-Bold.otf
+          weight: 700
+
+        # Heavy (800)
+        - asset: fonts/SF-Pro-Display-Heavy.otf
+          weight: 800
+
+        # Black (900)
+        - asset: fonts/SF-Pro-Display-Black.otf
+          weight: 900
   assets:
     - assets/images/
     - .env
