--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,5 +57,6 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/icons/
     - .env
     - assets/topup_dummy.json
