add contact picker feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   flutter_dotenv: ^6.0.0
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.4
-  flutter_svg: ^2.2.1
+  flutter_native_contact_picker: ^0.0.10
   fluttertoast: null
   geolocator: ^14.0.2
   google_fonts: ^6.3.1
