--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,14 +20,15 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_dotenv: ^6.0.0
+  flutter_native_contact_picker: ^0.0.10
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.4
-  flutter_native_contact_picker: ^0.0.10
-  fluttertoast: null
+  fluttertoast: ^9.0.0
   geolocator: ^14.0.2
   google_fonts: ^6.3.1
   intl: ^0.19.0
   logger: ^2.6.1
+  permission_handler: ^12.0.1
   printing: ^5.12.0
   provider: ^6.1.5
   sentry_flutter: ^9.6.0
