--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,3 +62,19 @@ flutter:
     - assets/icons/
     - .env
     - assets/topup_dummy.json
+    
+  fonts:
+    - family: Gabarito
+      fonts:
+        - asset: assets/fonts/Gabarito-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Gabarito-Medium.ttf
+          weight: 500
+        - asset: assets/fonts/Gabarito-SemiBold.ttf
+          weight: 600
+        - asset: assets/fonts/Gabarito-Bold.ttf
+          weight: 700
+        - asset: assets/fonts/Gabarito-ExtraBold.ttf
+          weight: 800
+        - asset: assets/fonts/Gabarito-Black.ttf
+          weight: 900
