--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   shared_preferences: ^2.5.3
   shimmer: ^3.0.0
   url_launcher: ^6.3.2
+  web_socket_channel: ^3.0.3
   webview_flutter: ^4.2.2
 
 flutter_native_splash:
