--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/images/kyc/
     - assets/icons/
     - .env
 
