--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   app_links: ^7.0.0
   bloc: ^9.0.0
   cached_network_image: ^3.4.1
+  camera: ^0.11.3
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   equatable: ^2.0.7
@@ -25,8 +26,10 @@ dependencies:
   fluttertoast: ^9.0.0
   geolocator: ^14.0.2
   google_fonts: ^6.3.1
+  image_editor: ^1.6.0
   intl: ^0.20.2
   logger: ^2.6.1
+  path_provider: ^2.1.5
   permission_handler: ^12.0.1
   printing: ^5.12.0
   provider: ^6.1.5
