--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   bloc: ^9.0.0
   cached_network_image: ^3.4.1
   camera: ^0.11.3
+  crypto: ^3.0.7
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   equatable: ^2.0.7
