--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,10 +17,13 @@ dependencies:
   cupertino_icons: ^1.0.8
   dio: ^5.9.0
   equatable: ^2.0.7
+  firebase_core: ^4.2.1
+  firebase_messaging: ^16.0.4
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
   flutter_dotenv: ^6.0.0
+  flutter_local_notifications: ^19.5.0
   flutter_native_contact_picker: ^0.0.10
   flutter_screenutil: ^5.9.3
   flutter_secure_storage: ^9.2.4
